2006-12-15  Sven Schuetz

	* backend_sfcb.c, symtab.c:
	Fixed 1614898: coredumps for instance of undefined class

2006-11-30  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* configure.ac: 
	Fixed 1605522: added warning if no yacc or lex found.
	
2006-11-20  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* symtab.c: 
	Fixed 1599675: endless loop after class redefinition.

2006-11-07  Sven Schuetz
	* backend_sfcb.c:
	Fixed 1587752: support for qualifier and instance swapping

2006-10-27  Sven Schuetz
	* backend_sfcb.c, backend_print.c, configure.ac, mofparse.c, symtab.h,
	symtab.c, mofc.y, mofs.l, backend.h:
	Fixed 1585788: support for instances and qualifiers

2006-08-23  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* symtab.c: 
	Fixed 1532423: allow class redefinition (upgrade) if a version
	qualifier is specified.

2006-07-25  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* configure.ac, mofc.y, symtab.c, symtab.h: 
	Fixed 1528352: now the compiler can support forward declarations.
	The old behaviour can be established using --enable-onepass.

2006-07-19 sschuetz
	* backend_sfcb.c:
	Fixed 1525280: changed some function calls due to sfcb changes

2006-01-31    <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* backend_sfcb.c:
	Related to 1420604: adapted to cmpidt.h changes.

	* mofs.l: 
	Fixed 1420397: close include files after EOF. Added support for
	backslash-delimited pathes.

2006-01-26  mihajlov

	* mofparse.c: Enhancement: allow multiple backend options to be
	specified.

2006-01-26    <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* configure.ac, Makefile.am: 
	Fixed 1414767 vpath build failure. Made xFLAGS processing
	more standards compliant.

2006-01-23  a3schuur

	* configure.ac: [ 1408327 ] sfcbmof does not support big/little
	endian in cross-compile Fixing offset problems in P32 mode Setting