@@ -1,3 +1,9 @@
+2006-12-20  Viktor Mihajlovski  <mihajlov@localhost.localdomain>
+
+	* backend_sfcb.c, configure.ac, symtab.c: 
+	Combined fix for 1601274, 1614898: new option --enable-namespace-kludge
+	for the support of legacy __namespace class compilation.
+
 2006-12-15  Sven Schuetz
 
 	* backend_sfcb.c, symtab.c:
